# wastevision

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
configs/: augmentation.yaml  data.yaml  deploy.yaml  model.yaml  train.yaml
data/processed/labels/: train.cache  val.cache
deploy/: Dockerfile  Dockerfile.gpu  docker-compose.yml
deploy/aws/: cloudformation.yml  ecr-push.sh  ecs-task-def.json
notebooks/: exploration.ipynb
notebooks/aug_test/labels/: kaggle_v2_cardboard_cardboard169_aug0.txt  kaggle_v2_glass_glass193_aug0.txt  kaggle_v2_glass_glass222_aug0.txt  kaggle_v2_glass_glass321_aug0.txt  kaggle_v2_glass_glass426_aug0.txt  kaggle_v2_glass_glass484_aug0.txt  kaggle_v2_metal_metal248_aug0.txt  kaggle_v2_metal_metal340_aug0.txt  kaggle_v2_paper_paper206_aug0.txt  kaggle_v2_paper_paper524_aug0.txt  kaggle_v2_paper_paper66_aug0.txt  kaggle_v2_paper_paper71_aug0.txt  kaggle_v2_plastic_plastic372_aug0.txt  (+36 more)
scripts/: colab_phase3_cells.txt  run_conversion.py  run_phase2.py  run_phase3.py  run_pipeline.sh  visualize_gate1.py
src/augmentation/: __init__.py  pipeline.py  visualize.py
src/data/: __init__.py  convert.py  download.py  split.py  validate.py
src/evaluation/: benchmark.py  metrics.py  visualize.py
src/inference/: batch.py  postprocess.py  preprocess.py  server.py
src/model/: __init__.py  export.py  yolo_config.py
src/training/: callbacks.py  hyperparams.py  train.py
src/utils/: __init__.py  config.py  io.py  logging.py
tests/: conftest.py  test_augmentation.py  test_data.py  test_inference.py  test_model.py
(+3204 files in other folders)
